terraform/do/files/ingress-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`k8s.lingrino.dev`)
      services:
        - kind: TraefikService
          name: api@internal
